# recomi

./: .gitignore  Makefile  README.md  ops  root  setup.cfg  version
recomi/: collecting.py  git.py  main.py  shared.py
test/: test_collecting.py  test_git.py  test_main.py
test/DummyCollection/: list-upstream  recomi.ini
