; vim:ft=dosini:

[metadata]
name = recomi
version = attr:recomi.__version__
url = https://github.com/pscl4rke/recomi
description = Repository Collection Mirror
long_description = file:README.md
licence = GPLv3
author = P. S. Clarke
author_email = recomi@pscl4rke.net

[options]
packages = recomi

[options.entry_points]
console_scripts =
    recomi = recomi.main:main
