; vim:ft=dosini:

[metadata]
name = recomi
version = attr:recomi.__version__
url = https://github.com/pscl4rke/recomi
project_urls =
    Source Code = https://github.com/pscl4rke/recomi
    Issues = https://github.com/pscl4rke/recomi/issues
description = Repository Collection Mirror
long_description = file:README.md
long_description_content_type = text/markdown
licence = GPLv3
author = P. S. Clarke
author_email = recomi@pscl4rke.net
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Mirroring
    Topic :: Utilities

[options]
packages = recomi

[options.entry_points]
console_scripts =
    recomi = recomi.main:main
